--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <version>1.0</version>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <datastax-driver.version>4.5.1</datastax-driver.version>
   </properties>
 
