--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,6 @@
       <version>${datastax-driver.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.datastax.oss</groupId>
-      <artifactId>java-driver-mapper-processor</artifactId>
-      <version>${datastax-driver.version}</version>
-    </dependency>
-    <dependency>
       <groupId>at.favre.lib</groupId>
       <artifactId>bcrypt</artifactId>
       <version>0.7.0</version>
@@ -47,9 +42,17 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
         <configuration>
           <source>14</source>
           <target>14</target>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>com.datastax.oss</groupId>
+              <artifactId>java-driver-mapper-processor</artifactId>
+              <version>${datastax-driver.version}</version>
+            </path>
+          </annotationProcessorPaths>
         </configuration>
       </plugin>
 
